<resources>
    <string name="app_name">CUITServer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">register</string>
    <string name="title_activity_find_password">find password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_discovery">discovery</string>
    <string name="title_service">service</string>
    <string name="title_person">person</string>
    <string name="title_find_password"></string>
    <string name="comment_content">评论内容</string>
    <string name="comment_date_time">4-15 13:28</string>
    <string name="comment_name">name</string>
    <string name="comment_role">角色</string>
    <string name="comment_head">comment_head</string>
    <string name="discovery_date_time">02月02日13:28</string>
    <string name="discovery_content">世界上有太多孤独的人害怕先踏出第一步。我父亲曾经说过，无论你做什么，百分之百地做，工作就工作，笑就笑，吃饭的时候要像最后一顿。</string>
    <string name="discovery_tag">标签</string>
    <string name="discovery_role">(角色)</string>
    <string name="leave_comment">说点什么吧</string>
    <string name="submit">发送</string>
    <string name="comment_separator">评论</string>
    <string name="content_separator">评论</string>
    <string name="receive_address">四川省成都市双流区学府路一段24号成都西信息工程大学</string>
    <string name="phone">18300000001</string>
    <string name="name">熊大</string>
    <string name="deal_success">交易成功</string>
    <string name="商品名称">商品名称</string>
    <string name="title_activity_all_hydropower_bill">AllHydropowerBillActivity</string>
    <string name="input_hint_discovery">输入你的想法</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
