<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_head_comment"
            android:layout_width="@dimen/iv_head_width"
            android:layout_height="@dimen/iv_head_height"
            android:contentDescription="@string/comment_head"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <TextView
            android:id="@+id/tv_name_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/comment_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/iv_head_comment"
            app:layout_constraintTop_toTopOf="@+id/iv_head_comment" />

        <TextView
            android:id="@+id/tv_date_time_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/comment_date_time"
            app:layout_constraintStart_toStartOf="@+id/tv_name_comment"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_comment" />

        <TextView
            android:id="@+id/tv_content_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/comment_content"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_head_comment" />

        <TextView
            android:id="@+id/tv_role_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/comment_role"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/role_padding"
            android:paddingRight="@dimen/role_padding"
            android:background="@drawable/corner_rect_solid"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_name_comment"
            app:layout_constraintStart_toEndOf="@+id/tv_name_comment" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>