<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_head_discovery"
        android:layout_width="@dimen/iv_head_width"
        android:layout_height="@dimen/iv_head_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <TextView
        android:id="@+id/tv_name_discovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/iv_head_discovery"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_time_discovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/discovery_date_time"
        app:layout_constraintBottom_toBottomOf="@+id/iv_head_discovery"
        app:layout_constraintStart_toEndOf="@+id/iv_head_discovery" />

    <TextView
        android:id="@+id/tv_content_discovery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:text="@string/discovery_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_head_discovery" />

    <TextView
        android:id="@+id/tv_tag_discovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/tag_background"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/discovery_tag"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_name_discovery"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.example.ninegridview.ui.NineGridView
        android:id="@+id/nine_grid_view_discovery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content_discovery">

    </com.example.ninegridview.ui.NineGridView>

    <TextView
        android:id="@+id/tv_role_discovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/corner_rect_solid"
        android:paddingLeft="@dimen/role_padding"
        android:paddingRight="@dimen/role_padding"
        android:text="@string/discovery_role"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_name_discovery"
        app:layout_constraintStart_toEndOf="@+id/tv_name_discovery" />

</androidx.constraintlayout.widget.ConstraintLayout>